CHORE: Update package.json formatting
- Minify package.json formatting for consistency
- Add @flydotio/dockerfile as dev dependency

--- a/package.json
+++ b/package.json
@@ -1,12 +1,1 @@
-{
-"name": "notebook.oceanheart.ai",
-"module": "index.ts",
-"type": "module",
-"private": true,
-"devDependencies": {
-  "@types/bun": "latest"
-},
-"peerDependencies": {
-  "typescript": "^5"
-}
-}
+{"name":"notebook.oceanheart.ai","module":"index.ts","type":"module","private":true,"devDependencies":{"@flydotio/dockerfile":"^0.7.10","@types/bun":"latest"},"peerDependencies":{"typescript":"^5"}}
