CHORE: Update Docker and deployment configurations
- Update .dockerignore to exclude unnecessary files
- Modify Dockerfile for improved build process
- Update docker-compose.yml configuration
- Adjust Caddyfile for production deployment
- Update deployment documentation with latest procedures
- Enhance Fly.io and Turso production setup guide

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,18 @@
+# Git
+.git/
+.gitignore
+
+# Claude
+.claude/
+.cursor/
+
+# Go build cache
+bin/
+notebook
+main
+*.tar.gz
+*.zip
+
 # Python
 __pycache__/
 *.py[cod]
